Fix invisible splash-screen catching clicks (#141)

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@ body {
   background-color: #394B59;
 }
 .splash-screen_container {
+  pointer-events: none;
   opacity: 0;
   transition: opacity 1s ease-in;
   position: absolute;
